         order.

WIP      [Most played ROMs] Virtual Launcher. Histogram of how many times a ROM has been played,
         ordered by the number of times a ROM has been played.

WIP      Extranafart for Categories/Launchers/ROMs.

FIX      Fixed loading of No-Intro files.

FIX      Fixed "Edit Launcher" >> "Choose default Assets/Artwork..."


[B]Advanced Emulator Launcher | version 0.9.3 | 8 October 2016[/B]

FEATURE  LNK ROMs Launcher in Windows.

FEATURE  Rename launcher ROMs JSON file if Launcher name changes.

FEATURE  Favourite/Collection ROMs can be updated with information from parent.

FEATURE  Reorganised all Edit Asset/Artwork context menus.

FEATURE  Reorganised and improved all ROM context menus.

FEATURE  Increased the number of AEL platforms to 50.

FEATURE  Setting options to hide [Fav] and [OK] labels in Launcher/Collection/Favourite ROMs.

FEATURE  Setting options to hide Favourites and ROM Collections.

FEATURE  ROM Collections can be imported/exported and shared with other people.

FEATURE  ROMs in a Collection can now be edited.

FEATURE  Move ROMs up/down in collections has been moved from Collection ROM context menu into
         Edit ROM in Collection context menu.

FEATURE  Collection ROMs can be placed in any position in the Collection easily via the context
         menu.

FEATURE  Edit ROM -- Edit Metadata shows all available metadata scrapers, not just the one
         selected in settings. The metadata scraper selected in plugin settings is only used
         when scanning ROMs.

FEATURE  Edit ROM -- Edit Assets/Artwork now automatically chooses the scrapers available
         depending on the asset selected.

FIX      Fixed launching of standalone launchers having LNK files in Windows.

FIX      Fixed launching of ROM launchers having LNK files as ROMs in Windows. Any executable can
         be chosen as the launcher program (it will be ignored), expect an LNK file.
